--- a/ColorSisters/Base.lproj/Main.storyboard
+++ b/ColorSisters/Base.lproj/Main.storyboard
@@ -38,7 +38,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="0.0" height="0.0"/>
                                 </variation>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="0.0" y="1" width="0.0" height="0.0"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="0.0" height="0.0"/>
                                 </variation>
                             </imageView>
                             <pageControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="UeQ-M6-Wg2">
@@ -78,18 +78,62 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Smo-ce-kkg">
                                 <rect key="frame" x="97" y="150" width="406" height="406"/>
+                                <variation key="heightClass=regular" fixedFrame="YES">
+                                    <rect key="frame" x="0.0" y="0.0" width="0.0" height="0.0"/>
+                                </variation>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="0.0" y="0.0" width="0.0" height="0.0"/>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="0.0" y="124" width="400" height="529"/>
+                                </variation>
                             </imageView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="trC-re-mzQ">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <items>
+                                    <barButtonItem title="Picker" id="0qZ-JI-Qtw">
+                                        <connections>
+                                            <action selector="showPhotoPicker:" destination="KGb-kh-VSH" id="k1Z-HG-4GE"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Ao0-L5-eU7"/>
+                                    <barButtonItem systemItem="camera" id="bgE-er-k8P">
+                                        <connections>
+                                            <action selector="showCamera:" destination="KGb-kh-VSH" id="FGa-hS-WD0"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="0.0" y="524" width="320" height="44"/>
+                                </variation>
+                            </toolbar>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JqF-Is-ymk">
                                 <rect key="frame" x="202" y="81" width="196" height="30"/>
                                 <state key="normal" title="Simulated Image Processing">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="102" y="64" width="196" height="30"/>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="102" y="72" width="196" height="30"/>
+                                </variation>
                                 <connections>
                                     <segue destination="toG-5d-dru" kind="show" id="Mj5-i5-9yV"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="trC-re-mzQ"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="trC-re-mzQ"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <outlet property="imageView" destination="Smo-ce-kkg" id="aui-qy-h1x"/>
@@ -97,7 +141,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jBY-Yx-2pF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-380" y="660"/>
+            <point key="canvasLocation" x="-324" y="722"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="USt-La-MgW">
+            <objects>
+                <viewController id="vod-NZ-0Zc" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="67k-cT-Y5n"/>
+                        <viewControllerLayoutGuide type="bottom" id="eYR-b2-EfO"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="q8p-2t-LBO">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2n4-fC-CzK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-351" y="1374.75"/>
         </scene>
         <!--Matches Table View Controller-->
         <scene sceneID="7SJ-0n-C1S">
@@ -177,12 +239,27 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R2S-M3-cPj">
                                 <rect key="frame" x="180" y="237" width="240" height="128"/>
+                                <variation key="heightClass=regular" fixedFrame="YES">
+                                    <rect key="frame" x="0.0" y="0.0" width="0.0" height="0.0"/>
+                                </variation>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="0.0" y="0.0" width="0.0" height="0.0"/>
+                                </variation>
                             </imageView>
                             <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ulm-Ak-lRo">
                                 <rect key="frame" x="-36" y="7" width="600" height="44"/>
                                 <items>
-                                    <navigationItem title="Match Details" id="MWL-Hd-1nC"/>
+                                    <navigationItem title="Match Details" id="MWL-Hd-1nC">
+                                        <barButtonItem key="leftBarButtonItem" title="Item" systemItem="done" id="Zxm-iO-oji">
+                                            <connections>
+                                                <segue destination="toG-5d-dru" kind="show" id="3KZ-np-tOq"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
                                 </items>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="0.0" y="0.0" width="403" height="44"/>
+                                </variation>
                             </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -191,7 +268,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SFK-Zy-hPW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1082" y="660"/>
+            <point key="canvasLocation" x="1267.5" y="576"/>
         </scene>
         <!--Share View Controller-->
         <scene sceneID="BhO-oD-ptb">
@@ -292,6 +369,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="3yt-fl-KkC"/>
+        <segue reference="EoA-Ha-Mru"/>
+        <segue reference="Mj5-i5-9yV"/>
     </inferredMetricsTieBreakers>
 </document>
