--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -1,7 +1,9 @@
-.authform
+.row.authform
   = form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post, :role => 'form'}) do |f|
+    br
     h3
       | Reset Password
+    br
     .row
       .panel.columns.large-6.large-centered.medium-8.medium-centered
         p
@@ -12,9 +14,12 @@
           .columns.large-12.large-centered.medium-12.medium-centered
             = f.label :email
             = f.email_field :email, :autofocus => true, class: 'form-control', id: 'new_password_email'
+            br
         .row
           .columns.large-12.large-centered.medium-12.medium-centered
             = f.submit 'Reset Password', :class => 'button expand', id: 'reset_password_submit'
   .row
-    = button_to "Cancel", root_path, method: :get, class: "button left"
+    .large-6.columns.medium-6.small-8
+      .large-3.large-offset-6.medium-5.medium-offset-4.small-7.small-offset-1
+        = button_to "Cancel", root_path, method: :get, class: "button"
     
