--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,35 +16,7 @@
  *= require_tree .
  */
 
-.cbutton{
-  display: inline-block;
-}
-
-
-ul.imagelist li{
-  padding:0;
-  margin:0;
-  border-width:0;
-
-}
-
-img.row-image{
-  padding:0;
-  margin:0;
-  border-width:0;
-}
-
-li.row-item{
-  padding:0;
-  margin:0;
-  border-width:0;
-}
-
-img.wide {
-  max-width: 100%;
-  min-width: 100%;
-}
-
+html { font-size: 62.5%;}
 
 #errorExplanation {
 //  width: 400px;
