--- a/ColorSisters/Base.lproj/LaunchScreen.xib
+++ b/ColorSisters/Base.lproj/LaunchScreen.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -13,25 +14,61 @@
             <subviews>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Copyright (c) 2014 Kokko, Inc. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="8ie-xW-0ye">
                     <rect key="frame" x="20" y="439" width="441" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="Atf-5a-Ws4"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="Atf-5a-Ws4"/>
+                        </mask>
+                    </variation>
+                    <variation key="widthClass=compact">
+                        <mask key="constraints">
+                            <include reference="Atf-5a-Ws4"/>
+                        </mask>
+                    </variation>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="CS_ios640x960" translatesAutoresizingMaskIntoConstraints="NO" id="afG-05-HUG">
                     <rect key="frame" x="8" y="8" width="464" height="423"/>
-                    <variation key="widthClass=compact" fixedFrame="YES">
-                        <rect key="frame" x="8" y="8" width="311" height="423"/>
-                    </variation>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="8ie-xW-0ye" secondAttribute="bottom" constant="20" id="Kzo-t9-V3l"/>
-                <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="MfP-vx-nX0"/>
-                <constraint firstAttribute="centerX" secondItem="8ie-xW-0ye" secondAttribute="centerX" id="ZEH-qu-HZ9"/>
+                <constraint firstItem="8ie-xW-0ye" firstAttribute="top" secondItem="afG-05-HUG" secondAttribute="bottom" constant="8" symbolic="YES" id="30r-Pc-qWh"/>
+                <constraint firstAttribute="bottom" secondItem="8ie-xW-0ye" secondAttribute="bottom" constant="20" id="30u-bb-AbO"/>
+                <constraint firstItem="afG-05-HUG" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="FlU-kO-YUM"/>
+                <constraint firstItem="afG-05-HUG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="85" id="Ft7-Ld-s8E"/>
+                <constraint firstItem="afG-05-HUG" firstAttribute="centerX" secondItem="8ie-xW-0ye" secondAttribute="centerX" id="LDa-6R-aCD"/>
+                <constraint firstItem="afG-05-HUG" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="topMargin" id="cDO-yv-E1l"/>
+                <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="shs-xU-gmJ"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="FlU-kO-YUM"/>
+                    <exclude reference="Ft7-Ld-s8E"/>
+                    <exclude reference="LDa-6R-aCD"/>
+                    <exclude reference="cDO-yv-E1l"/>
+                    <exclude reference="30r-Pc-qWh"/>
+                    <exclude reference="30u-bb-AbO"/>
+                    <exclude reference="shs-xU-gmJ"/>
+                </mask>
+            </variation>
+            <variation key="widthClass=compact">
+                <mask key="constraints">
+                    <include reference="FlU-kO-YUM"/>
+                    <include reference="Ft7-Ld-s8E"/>
+                    <include reference="LDa-6R-aCD"/>
+                    <include reference="cDO-yv-E1l"/>
+                    <include reference="30r-Pc-qWh"/>
+                    <include reference="30u-bb-AbO"/>
+                    <include reference="shs-xU-gmJ"/>
+                </mask>
+            </variation>
             <point key="canvasLocation" x="548" y="455"/>
         </view>
     </objects>
