--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -16,7 +16,7 @@
   .text-wrapper {
 //    display: block;
     position: absolute;
-    top:57%;
+    top:53%;
     right:0;
     width: 38%;
     overflow: hide;
@@ -27,7 +27,9 @@
       margin: 0px;
       width: 100%;  
       font-family: Raleway;
-      font-size: 1rem;
+      font-weight: normal;
+      font-size: 0.9rem;
+      line-height: 1.5;
     }
   
 
@@ -41,8 +43,10 @@
         display: inline;
         color: white;
         width: 100%;
-        font-family: Myra;
+        font-family: Raleway;
+        font-weight: normal;
         font-size: 1.2rem;
+//        padding 0.6rem 0.4rem
         padding-right: .6rem;
         padding-left: .4rem;
       }
@@ -66,7 +70,9 @@ $lt-blue: #A6CFDA;
 
 ul.imagelist {
   
+  
   p {
+    
     margin: 0;
   }
   
@@ -83,7 +89,7 @@ ul.imagelist {
       position: absolute;
       top: 4%;
       left: 22%;
-      font-family: Myra;
+      font-family: Raleway;
       font-size: 1.4rem;
       text-decoration: underline;
     }
@@ -92,11 +98,12 @@ ul.imagelist {
       position: absolute;
       font-family: Raleway;
       font-weight: 300;
-      font-size: 1rem;
+      font-size: 0.9rem;
+      line-height: 1.5;
       color: white;
       top: 20%;
       left: 22%;
-      right: 1.5%;
+      right: 3%;
       padding: .6rem;
     }
   }
@@ -115,7 +122,7 @@ ul.imagelist {
       position: absolute;
       top: 4%;
       left: 3%;
-      font-family: Myra;
+      font-family: Raleway;
       font-size: 1.4rem;
       text-decoration: underline;
     }
@@ -124,11 +131,12 @@ ul.imagelist {
       position: absolute;
       font-family: Raleway;
       font-weight: 300;
-      font-size: 1rem;
+      font-size: 0.9rem;
+      line-height: 1.5;
       color: white;
       top: 20%;
       left: 3%;
-      right: 50%;
+      right: 48%;
       padding: .6rem;
     }
   }
@@ -147,7 +155,7 @@ ul.imagelist {
       position: absolute;
       top: 4%;
       left: 3%;
-      font-family: Myra;
+      font-family: Raleway;
       font-size: 1.4rem;
       text-decoration: underline;
     }
@@ -156,7 +164,8 @@ ul.imagelist {
       position: absolute;
       font-family: Raleway;
       font-weight: 300;
-      font-size: 1rem;
+      font-size: 0.9rem;
+      line-height: 1.5;
       color: white;
       top: 20%;
       left: 3%;
