--- a/ColorSisters/Base.lproj/Main.storyboard
+++ b/ColorSisters/Base.lproj/Main.storyboard
@@ -38,18 +38,20 @@
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                 <color key="backgroundColor" red="1" green="0.035351606611024211" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="0.0" y="64" width="400" height="447"/>
+                                    <rect key="frame" x="0.0" y="64" width="400" height="300"/>
                                 </variation>
                             </imageView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nR4-jX-Tmb">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                 <items>
-                                    <barButtonItem title="Get Started" width="200" style="plain" id="bCC-M9-EEJ">
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="bAT-Nu-eBQ"/>
+                                    <barButtonItem title="Get Started" width="100" style="plain" id="bCC-M9-EEJ">
                                         <connections>
                                             <action selector="showCamera:" destination="KGb-kh-VSH" id="Du0-zC-pAx"/>
                                             <segue destination="KGb-kh-VSH" kind="show" id="476-Lu-huZ"/>
                                         </connections>
                                     </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Gxm-5m-YdP"/>
                                 </items>
                                 <variation key="widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="0.0" y="556" width="400" height="44"/>
@@ -58,12 +60,22 @@
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="b0z-U7-PBj">
                                 <rect key="frame" x="-19" y="-18" width="39" height="37"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="117" y="519" width="167" height="37"/>
+                                    <rect key="frame" x="117" y="500" width="167" height="37"/>
                                 </variation>
                                 <connections>
                                     <action selector="pageControlChanged:" destination="VoS-wI-0j9" eventType="valueChanged" id="vE7-Ak-bWZ"/>
                                 </connections>
                             </pageControl>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5gO-JK-f6v">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="80" y="372" width="240" height="128"/>
+                                </variation>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <variation key="default">
@@ -71,6 +83,7 @@
                                 <exclude reference="5SJ-6b-QFd"/>
                                 <exclude reference="nR4-jX-Tmb"/>
                                 <exclude reference="b0z-U7-PBj"/>
+                                <exclude reference="5gO-JK-f6v"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -78,6 +91,7 @@
                                 <include reference="5SJ-6b-QFd"/>
                                 <include reference="nR4-jX-Tmb"/>
                                 <include reference="b0z-U7-PBj"/>
+                                <include reference="5gO-JK-f6v"/>
                             </mask>
                         </variation>
                     </view>
@@ -104,7 +118,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Smo-ce-kkg">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Smo-ce-kkg">
                                 <rect key="frame" x="97" y="150" width="406" height="406"/>
                                 <variation key="heightClass=regular" fixedFrame="YES">
                                     <rect key="frame" x="0.0" y="0.0" width="0.0" height="0.0"/>
@@ -113,7 +127,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="0.0" height="0.0"/>
                                 </variation>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JqF-Is-ymk">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JqF-Is-ymk">
                                 <rect key="frame" x="202" y="81" width="196" height="30"/>
                                 <state key="normal" title="Simulated Image Processing">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -159,15 +173,15 @@
                                 <exclude reference="trC-re-mzQ"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="5hR-38-UvH"/>
+                                <exclude reference="P02-YQ-eYh"/>
+                                <exclude reference="WKP-Qq-jFp"/>
+                                <exclude reference="bNQ-1Q-CQ1"/>
                                 <exclude reference="ahn-Fr-pNU"/>
                                 <exclude reference="lYQ-cS-8Kx"/>
                                 <exclude reference="pqG-rE-oKN"/>
                                 <exclude reference="vhh-gR-IvY"/>
                                 <exclude reference="xxf-dr-33w"/>
-                                <exclude reference="5hR-38-UvH"/>
-                                <exclude reference="P02-YQ-eYh"/>
-                                <exclude reference="WKP-Qq-jFp"/>
-                                <exclude reference="bNQ-1Q-CQ1"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -175,15 +189,15 @@
                                 <include reference="trC-re-mzQ"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="5hR-38-UvH"/>
+                                <include reference="P02-YQ-eYh"/>
+                                <include reference="WKP-Qq-jFp"/>
+                                <include reference="bNQ-1Q-CQ1"/>
                                 <include reference="ahn-Fr-pNU"/>
                                 <include reference="lYQ-cS-8Kx"/>
                                 <include reference="pqG-rE-oKN"/>
                                 <include reference="vhh-gR-IvY"/>
                                 <include reference="xxf-dr-33w"/>
-                                <include reference="5hR-38-UvH"/>
-                                <include reference="P02-YQ-eYh"/>
-                                <include reference="WKP-Qq-jFp"/>
-                                <include reference="bNQ-1Q-CQ1"/>
                             </mask>
                         </variation>
                     </view>
